# hangperson

./: .gitignore  README.md  app_paths.py  hangman.py  hangman_wx.py  hangperson.py  hangperson_wx.py  hangperson_wx.spec  pyproject.toml  scored_words.py
assets/images/buttons/: start_rocket.xpm
data/: words.txt  words_el.txt  words_en.txt  words_fr.txt  words_ru.txt
data/dictionaries/apertium/: apertium-ell.ell.dix  apertium-ell.ell_wl.txt  apertium-ell.ell_wl_clean.txt  apertium-eng.eng_wl.txt  apertium-eng.eng_wl_clean.txt  apertium-fra.fra_wl.txt  apertium-fra.fra_wl_clean.txt  apertium-rus.rus_wl.txt  apertium-rus.rus_wl_clean.txt
data/difficulty/: el_difficulty.tsv  en_difficulty.tsv  en_difficulty_uk_us_flags.tsv  fr_difficulty.tsv  ru_difficulty.tsv
data/locales/: el.json  en.json  fr.json  ru.json
tests/: test_app_paths.py  test_compute_difficulty.py  test_extract_apertium_wordlists.py  test_flag_en_uk_us_variants.py  test_hangman_game.py  test_hangman_wx_lifecycle.py  test_hangperson_game.py  test_hangperson_wx_lifecycle.py  test_load_words.py  test_normalize_corpus.py  test_postprocess_wordlist.py  test_scored_words.py
tools/: __init__.py  compute_difficulty.py  download_mc4_corpus.py  extract_apertium_wordlists.py  flag_en_uk_us_variants.py  normalize_corpus.py  postprocess_wordlist.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: sync-static-assets.mjs
web/src/: App.css  App.tsx  index.css
web/src/game/: assets.ts  hangperson.test.ts  hangperson.ts  publicPath.ts  runtime.ts  scoredWords.test.ts  (+3 more)
